--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
 .jumbotron {
     padding-top: 0;
     height: 100vh;
-    background: url("../images/jumbotron.jpg") no-repeat center center fixed;
+    background: url("../images/jumbotron2.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background-attachment: fixed;
     color: white;
+    margin-bottom: 0;
 }
 
 #header {
@@ -25,6 +26,14 @@
     color: white;
 }
 
+.nav a:hover {
+    color: rgba(256, 256, 256, .3);
+}
+
 .dropdown-menu a {
     color: black;
+}
+
+.dropdown-menu a:hover {
+    color: rgba(0, 0, 0, .3);
 }
